feat: adds ThingForm and new home.html

--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -1,11 +1,18 @@
 <html>
 <head>
-  <title>Things</title>
+    <title>Things</title>
 </head>
 <body>
   <h1>
-    Things
+       Things
   </h1>
-  <p>Some stuff about things goes here.</p>
+  <p>
+      Some stuff about things goes here.
+  </p>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
